ad info placement fix, fix default ad banner not showing if no ad is available

--- a/src/app/components/ad/ad.component.scss
+++ b/src/app/components/ad/ad.component.scss
@@ -30,7 +30,7 @@
 
 .ad-info {
 	text-align: right;
-	font-size: 0.6rem;
+	font-size: 6px;
 	background: #fafafa;
 	border-radius: 4px;
 	border-top-right-radius: 0px;
@@ -43,16 +43,17 @@
 	.ad-info-container {
 		min-height: 0px !important;
 		position: absolute;
-		top: -8px;
-		left: 50%;
-		margin-left: 142px;
+		top: -11.2px;
+		right: 0px;
+		width: auto !important;
+		margin-right: calc((100% - 320px) / 2);
 	}
 }
 @media only screen and (max-width: 320px) {
 	.ad-info-container {
 		min-height: 0px !important;
 		position: absolute;
-		top: -8px;
+		top: -11.2px;
 		width: auto !important;
 		right: 0px;
 	}
